fixed back end box spacing

--- a/src/styles/skillsMenu.css
+++ b/src/styles/skillsMenu.css
@@ -47,7 +47,7 @@
 }
 
 .skill-sub-container-1 h3,
-.skill-sub-container-3 h3 {
+.skill-sub-container-2 h3 {
     position: relative;
     margin: 0;
 }
@@ -116,7 +116,7 @@
 
     .skill-sub-container-1,
     .skill-sub-container-2 {
-        gap: 0.2rem
+        gap: 0.1rem
     }
 
     .skill-sub-container {
